@@ -1,2 +1,3 @@
 Kissa ja koira.
 Ulkona paistaa aurinko. On lämmintä.
+Kun aurinko paistaa, ei yleensä sada vettä.
