@@ -1,3 +1,4 @@
 E: Kissa ja koira.
 B: Ulkona paistaa aurinko. 
 E: On lämmintä.
+E: Kun aurinko paistaa, ei yleensä sada vettä.
