@@ -1,3 +1,7 @@
+2008-06-08 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Work on sentence splitting.
+
 2008-06-07 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Work on sentence splitting.
